# Lantenna

./: .gitignore  ISSUES.md  README.md  package-lock.json  package.json  vite.config.js
media-sources/: antenna-icon.af
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  scanner.rs  storage.rs  system_colors.rs
src/lib/: tauri.ts  types.ts  windowManager.ts
src/lib/components/: HostInspector.svelte  HostTable.svelte  ScanToolbar.svelte
src/lib/util/: notifications.ts  scanStore.ts  windowState.ts
src/routes/: +layout.svelte  +page.svelte
