[package]
name = "lantenna"
version = "0.1.0"
description = "A System 7 LAN scanner"
authors = ["you"]
edition = "2021"

[lib]
name = "lantenna_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
if-addrs = "0.13"
ipnet = "2.10"
futures = "0.3"
dns-lookup = "2.0"
log = "0.4"
env_logger = "0.11"
